--- a/nursellebutikpastalar.html
+++ b/nursellebutikpastalar.html
@@ -13,7 +13,7 @@
     }
     h1 {
       margin: 2rem;
-      color: #d94f6d;
+      color: red;
     }
     .sidebar {
       position: fixed;
@@ -148,6 +148,11 @@
       <span>Instagram</span>
     </a>
   </div>
+
+  <ul>
+    <li>hakan</li>
+    <li>eray</li>
+  </ul>
 
   <h1>Nurselle Butik Pastalar 🎂</h1>
   <div class="grid" id="productGrid"></div>
